# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright © 2007-2018 ANSSI. All Rights Reserved.
bin_PROGRAMS = downloadrequest
downloadrequest_SOURCES = downloadrequest.c
downloadrequest_LDFLAGS = 
downloadrequest_CPPFLAGS= -O -Wall -Wextra -Wcast-qual -Wstrict-prototypes -Werror -fno-common -DDOWNLOADSOCKET=\"/var/run/download\"
